<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_testing_ros</name>
  <version>0.26.4</version>
  <description>A package providing utilities for writing ROS2 enabled launch tests.</description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>

  <author email="jacob@openrobotics.org">Jacob Perron</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="pete.baughman@apex.ai">Pete Baughman</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_testing</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
