<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2launch</name>
  <version>0.28.0</version>
  <description>
    The launch command for ROS 2 command line tools.
  </description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>

  <license>Apache License 2.0</license>

  <author email="jacob@openrobotics.org">Jacob Perron</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="william@osrfoundation.org">William Woodall</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2cli</exec_depend>
  <exec_depend>ros2pkg</exec_depend>

  <!-- Explicit group resolution - see ros-infrastructure/catkin_pkg#369 -->
  <exec_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">launch_xml</exec_depend>
  <exec_depend condition="$DISABLE_GROUPS_WORKAROUND != 1">launch_yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <group_depend>launch_frontend_packages</group_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
